Shaka player tutorial

--- a/X_STREAM_EXTENDED/views/index.html
+++ b/X_STREAM_EXTENDED/views/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>STREAMING</title>
+    <title>Document</title>
   </head>
   <body>
-    <video id="jsVideo" controls></video>
-    <script type="text/javascript" src="/public/main.js"></script>
+    <h1>TEST</h1>
+    <video id="my-video"></video>
+    <script src="/assets/main.js"></script>
   </body>
 </html>
